# parrot-controller

./: .gitignore  CMakeLists.txt  README.md  openocd.cfg
failure/: tmc2209_wrapper.cpp  tmc2209_wrapper.h
src/: controller-config.h  controller.h  creature.h  display.cpp  display.h  dmx.cpp  dmx.h  main.c  main.cpp  parrot.h  relay.cpp  relay.h  servo.cpp  servo.h  tasks.cpp  tasks.h  tusb_config.h  wire_decoder.cpp  wire_decoder.h
src/controller/: controller.cpp  controller.h  stepper_handler.cpp  stepper_handler.h
src/creature/: config.cpp  config.h  creature.cpp  creature.h  joint.cpp  joint.h  parrot.cpp  parrot.h
src/device/: display.cpp  display.h  relay.cpp  servo.cpp  servo.h  status_lights.cpp  status_lights.h  stepper.cpp  stepper.h  tmc2209_wrapper.c  tmc2209_wrapper.cpp
src/io/: dmx.cpp  dmx.h  handler.h  io.h  pio_uart.cpp  pio_uart.h  stepper_uart.cpp  stepper_uart.h  uart.cpp  uart.h  uart_rx.pio
src/logging/: logging.cpp  logging.h
src/shell/: shell.cpp  shell.h
src/usb/: usb.cpp  usb.h  usb_descriptors.cpp
src/util/: fast_hsv2rgb.h  fast_hsv2rgb_32bit.cpp  ranges.cpp  ranges.h
